llvm/test/fail/08unfcom.dna
def main
   var i is int
   i := 5
   writeInteger: i
   writeString: "\nthis program is wrong!\n"

(*
where did that comment go?

